.antlr/CRPPLParser.java
// Generated from c:\Users\james\Documents\MSADPRG\CRPPL\CRPPL\CRPPL.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CRPPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, NUM_EXPR=5, GET=6, OF=7, FOR=8, ON=9, 
		GROUPBY=10, CREATEFUNCTION=11, ENDFUNCTION=12, RETURN=13, IF=14, THEN=15, 
		ELSE_IF=16, ELSE=17, TRUE=18, FALSE=19, END_IF=20, NEWCOLUMN=21, DELETECOLUMN=22, 
		CHANGEVALUE=23, TO=24, IMPORTFILE=25, ASSIGNEMT_OPERATOR=26, RESERVEDWORD_DO=27, 
		RESERVEDWORD_CONSTANT=28, GRAPH=29, TYPE=30, LABELONE=31, LABELTWO=32, 
		OPENPARENTHESIS=33, CLOSEPARENTHESIS=34, RESERVEDWORD=35, OPERATING_FUNCTION=36, 
		OPERATOR=37, SEPARATOR=38, LITERAL=39, IDENTIFIER=40, WHITESPACE=41, NEXTLINE=42, 
		TAB=43, CARRIAGERETURN=44, NEGATOR=45;
	public static final int
		RULE_multiexpr = 0, RULE_validexpr = 1, RULE_expr = 2, RULE_generalquery = 3, 
		RULE_importfile = 4, RULE_defineconstant = 5, RULE_altercolumn = 6, RULE_changevalue = 7, 
		RULE_graphquery = 8, RULE_createfunction = 9, RULE_functioncall = 10, 
		RULE_functionprototype = 11, RULE_conditionalstatement = 12, RULE_booleanstatement = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"multiexpr", "validexpr", "expr", "generalquery", "importfile", "defineconstant", 
			"altercolumn", "changevalue", "graphquery", "createfunction", "functioncall", 
			"functionprototype", "conditionalstatement", "booleanstatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'/'", "'+'", "'-'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'('", "')'", 
			null, null, null, null, null, null, "' '", "'\n'", "'\t'", "'\r'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "NUM_EXPR", "GET", "OF", "FOR", "ON", "GROUPBY", 
			"CREATEFUNCTION", "ENDFUNCTION", "RETURN", "IF", "THEN", "ELSE_IF", "ELSE", 
			"TRUE", "FALSE", "END_IF", "NEWCOLUMN", "DELETECOLUMN", "CHANGEVALUE", 
			"TO", "IMPORTFILE", "ASSIGNEMT_OPERATOR", "RESERVEDWORD_DO", "RESERVEDWORD_CONSTANT", 
			"GRAPH", "TYPE", "LABELONE", "LABELTWO", "OPENPARENTHESIS", "CLOSEPARENTHESIS", 
			"RESERVEDWORD", "OPERATING_FUNCTION", "OPERATOR", "SEPARATOR", "LITERAL", 
			"IDENTIFIER", "WHITESPACE", "NEXTLINE", "TAB", "CARRIAGERETURN", "NEGATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CRPPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CRPPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MultiexprContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CRPPLParser.EOF, 0); }
		public List<ValidexprContext> validexpr() {
			return getRuleContexts(ValidexprContext.class);
		}
		public ValidexprContext validexpr(int i) {
			return getRuleContext(ValidexprContext.class,i);
		}
		public MultiexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiexpr; }
	}

	public final MultiexprContext multiexpr() throws RecognitionException {
		MultiexprContext _localctx = new MultiexprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_multiexpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GET) | (1L << CREATEFUNCTION) | (1L << IF) | (1L << NEWCOLUMN) | (1L << DELETECOLUMN) | (1L << CHANGEVALUE) | (1L << RESERVEDWORD_DO) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(28);
					validexpr();
					}
					}
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GET) | (1L << CREATEFUNCTION) | (1L << IF) | (1L << NEWCOLUMN) | (1L << DELETECOLUMN) | (1L << CHANGEVALUE) | (1L << RESERVEDWORD_DO) | (1L << IDENTIFIER))) != 0) );
				}
			}

			setState(36);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(35);
				match(EOF);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValidexprContext extends ParserRuleContext {
		public GeneralqueryContext generalquery() {
			return getRuleContext(GeneralqueryContext.class,0);
		}
		public ImportfileContext importfile() {
			return getRuleContext(ImportfileContext.class,0);
		}
		public DefineconstantContext defineconstant() {
			return getRuleContext(DefineconstantContext.class,0);
		}
		public AltercolumnContext altercolumn() {
			return getRuleContext(AltercolumnContext.class,0);
		}
		public ChangevalueContext changevalue() {
			return getRuleContext(ChangevalueContext.class,0);
		}
		public GraphqueryContext graphquery() {
			return getRuleContext(GraphqueryContext.class,0);
		}
		public CreatefunctionContext createfunction() {
			return getRuleContext(CreatefunctionContext.class,0);
		}
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public ConditionalstatementContext conditionalstatement() {
			return getRuleContext(ConditionalstatementContext.class,0);
		}
		public ValidexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validexpr; }
	}

	public final ValidexprContext validexpr() throws RecognitionException {
		ValidexprContext _localctx = new ValidexprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_validexpr);
		try {
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				generalquery();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				importfile();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				defineconstant();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(41);
				altercolumn();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(42);
				changevalue();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(43);
				graphquery();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(44);
				createfunction();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(45);
				functioncall();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(46);
				conditionalstatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext left;
		public Token value;
		public Token op;
		public ExprContext right;
		public TerminalNode OPENPARENTHESIS() { return getToken(CRPPLParser.OPENPARENTHESIS, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode CLOSEPARENTHESIS() { return getToken(CRPPLParser.CLOSEPARENTHESIS, 0); }
		public TerminalNode NUM_EXPR() { return getToken(CRPPLParser.NUM_EXPR, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPENPARENTHESIS:
				{
				setState(50);
				match(OPENPARENTHESIS);
				setState(51);
				expr(0);
				setState(52);
				match(CLOSEPARENTHESIS);
				}
				break;
			case NUM_EXPR:
				{
				setState(54);
				((ExprContext)_localctx).value = match(NUM_EXPR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(63);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(57);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(58);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__0 || _la==T__1) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(59);
						((ExprContext)_localctx).right = expr(4);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(60);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(61);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__2 || _la==T__3) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(62);
						((ExprContext)_localctx).right = expr(3);
						}
						break;
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class GeneralqueryContext extends ParserRuleContext {
		public TerminalNode GET() { return getToken(CRPPLParser.GET, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(CRPPLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CRPPLParser.IDENTIFIER, i);
		}
		public TerminalNode ON() { return getToken(CRPPLParser.ON, 0); }
		public List<TerminalNode> OPERATING_FUNCTION() { return getTokens(CRPPLParser.OPERATING_FUNCTION); }
		public TerminalNode OPERATING_FUNCTION(int i) {
			return getToken(CRPPLParser.OPERATING_FUNCTION, i);
		}
		public List<TerminalNode> OF() { return getTokens(CRPPLParser.OF); }
		public TerminalNode OF(int i) {
			return getToken(CRPPLParser.OF, i);
		}
		public List<TerminalNode> SEPARATOR() { return getTokens(CRPPLParser.SEPARATOR); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(CRPPLParser.SEPARATOR, i);
		}
		public TerminalNode FOR() { return getToken(CRPPLParser.FOR, 0); }
		public List<TerminalNode> OPERATOR() { return getTokens(CRPPLParser.OPERATOR); }
		public TerminalNode OPERATOR(int i) {
			return getToken(CRPPLParser.OPERATOR, i);
		}
		public List<TerminalNode> LITERAL() { return getTokens(CRPPLParser.LITERAL); }
		public TerminalNode LITERAL(int i) {
			return getToken(CRPPLParser.LITERAL, i);
		}
		public TerminalNode GROUPBY() { return getToken(CRPPLParser.GROUPBY, 0); }
		public GeneralqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generalquery; }
	}

	public final GeneralqueryContext generalquery() throws RecognitionException {
		GeneralqueryContext _localctx = new GeneralqueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_generalquery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(GET);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPERATING_FUNCTION) {
				{
				setState(69);
				match(OPERATING_FUNCTION);
				setState(70);
				match(OF);
				}
			}

			setState(73);
			match(IDENTIFIER);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEPARATOR) {
				{
				{
				setState(74);
				match(SEPARATOR);
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPERATING_FUNCTION) {
					{
					setState(75);
					match(OPERATING_FUNCTION);
					setState(76);
					match(OF);
					}
				}

				setState(79);
				match(IDENTIFIER);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FOR) {
				{
				setState(85);
				match(FOR);
				setState(86);
				match(IDENTIFIER);
				setState(87);
				match(OPERATOR);
				setState(88);
				match(LITERAL);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEPARATOR) {
					{
					{
					setState(89);
					match(SEPARATOR);
					setState(90);
					match(IDENTIFIER);
					setState(91);
					match(OPERATOR);
					setState(92);
					match(LITERAL);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(100);
			match(ON);
			setState(101);
			match(IDENTIFIER);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUPBY) {
				{
				setState(102);
				match(GROUPBY);
				setState(103);
				match(IDENTIFIER);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEPARATOR) {
					{
					{
					setState(104);
					match(SEPARATOR);
					setState(105);
					match(IDENTIFIER);
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportfileContext extends ParserRuleContext {
		public TerminalNode RESERVEDWORD_DO() { return getToken(CRPPLParser.RESERVEDWORD_DO, 0); }
		public TerminalNode IMPORTFILE() { return getToken(CRPPLParser.IMPORTFILE, 0); }
		public TerminalNode OPENPARENTHESIS() { return getToken(CRPPLParser.OPENPARENTHESIS, 0); }
		public TerminalNode SEPARATOR() { return getToken(CRPPLParser.SEPARATOR, 0); }
		public TerminalNode CLOSEPARENTHESIS() { return getToken(CRPPLParser.CLOSEPARENTHESIS, 0); }
		public List<TerminalNode> LITERAL() { return getTokens(CRPPLParser.LITERAL); }
		public TerminalNode LITERAL(int i) {
			return getToken(CRPPLParser.LITERAL, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(CRPPLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CRPPLParser.IDENTIFIER, i);
		}
		public ImportfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importfile; }
	}

	public final ImportfileContext importfile() throws RecognitionException {
		ImportfileContext _localctx = new ImportfileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importfile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(RESERVEDWORD_DO);
			setState(114);
			match(IMPORTFILE);
			setState(115);
			match(OPENPARENTHESIS);
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==LITERAL || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(117);
			match(SEPARATOR);
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==LITERAL || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(119);
			match(CLOSEPARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineconstantContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CRPPLParser.IDENTIFIER, 0); }
		public TerminalNode RESERVEDWORD_CONSTANT() { return getToken(CRPPLParser.RESERVEDWORD_CONSTANT, 0); }
		public TerminalNode LITERAL() { return getToken(CRPPLParser.LITERAL, 0); }
		public DefineconstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineconstant; }
	}

	public final DefineconstantContext defineconstant() throws RecognitionException {
		DefineconstantContext _localctx = new DefineconstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defineconstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IDENTIFIER);
			setState(122);
			match(RESERVEDWORD_CONSTANT);
			setState(123);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AltercolumnContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(CRPPLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CRPPLParser.IDENTIFIER, i);
		}
		public TerminalNode FOR() { return getToken(CRPPLParser.FOR, 0); }
		public TerminalNode NEWCOLUMN() { return getToken(CRPPLParser.NEWCOLUMN, 0); }
		public TerminalNode DELETECOLUMN() { return getToken(CRPPLParser.DELETECOLUMN, 0); }
		public AltercolumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_altercolumn; }
	}

	public final AltercolumnContext altercolumn() throws RecognitionException {
		AltercolumnContext _localctx = new AltercolumnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_altercolumn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==NEWCOLUMN || _la==DELETECOLUMN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(126);
			match(IDENTIFIER);
			setState(127);
			match(FOR);
			setState(128);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChangevalueContext extends ParserRuleContext {
		public TerminalNode CHANGEVALUE() { return getToken(CRPPLParser.CHANGEVALUE, 0); }
		public TerminalNode OF() { return getToken(CRPPLParser.OF, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(CRPPLParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CRPPLParser.IDENTIFIER, i);
		}
		public TerminalNode TO() { return getToken(CRPPLParser.TO, 0); }
		public TerminalNode FOR() { return getToken(CRPPLParser.FOR, 0); }
		public TerminalNode OPERATOR() { return getToken(CRPPLParser.OPERATOR, 0); }
		public TerminalNode ON() { return getToken(CRPPLParser.ON, 0); }
		public List<TerminalNode> LITERAL() { return getTokens(CRPPLParser.LITERAL); }
		public TerminalNode LITERAL(int i) {
			return getToken(CRPPLParser.LITERAL, i);
		}
		public ChangevalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_changevalue; }
	}
